# RenderFever

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: compiler_config.cmake  dependencies.cmake
engine/: CMakeLists.txt
engine/include/rf/: test.hpp  utility.hpp
engine/include/rf/core/: dispatcher.hpp  engine.hpp  error.hpp  image.hpp  input.hpp  io.hpp  map_generators.hpp  stopwatch.hpp  utility.hpp
engine/include/rf/engine/: dispatcher.hpp  image.hpp  input.hpp  stopwatch.hpp  utility.hpp
engine/include/rf/graphics/: camera.hpp  color.hpp  cube.hpp  cubemap.hpp  lighting.hpp  material.hpp  mesh.hpp  mesh_shapes.hpp  model.hpp  renderer.hpp  shader.hpp  skybox.hpp  texture.hpp  transform.hpp  window.hpp
engine/include/rf/graphics/light/: directional_light.hpp  lighting.hpp  point_light.hpp  spot_light.hpp  types.hpp
engine/include/rf/graphics/lighting/: directional_light.hpp  point_light.hpp  spot_light.hpp  types.hpp
engine/include/rf/graphics/mesh/: cube.hpp  mesh.hpp  model.hpp  plane.hpp
engine/include/rf/input/: action.hpp  binding.hpp  event.hpp  input.hpp  key.hpp  map.hpp
engine/include/rf/inputs/: actions.hpp  binding.hpp  bindings.hpp  event.hpp  input.hpp  input_map.hpp  keys.hpp  map.hpp
engine/resources/shaders/main/: shader.frag  shader.vert
engine/shaders/fragment/: lighting.frag  main.frag
engine/shaders/vertex/: main.vert
engine/source/: test.cpp  utility.cpp
engine/source/core/: engine.cpp  image.cpp  io.cpp  utility.cpp
engine/source/engine/: image.cpp  utility.cpp
engine/source/graphics/: camera.cpp  color.cpp  cube.cpp  cubemap.cpp  material.cpp  mesh.cpp  mesh_shapes.cpp  model.cpp  renderer.cpp  shader.cpp  skybox.cpp  texture.cpp  transform.cpp  window.cpp
engine/source/graphics/light/: directional_light.cpp  point_light.cpp  spot_light.cpp
engine/source/graphics/lighting/: directional_light.cpp  point_light.cpp  spot_light.cpp
engine/source/graphics/mesh/: cube.cpp  mesh.cpp  model.cpp  plane.cpp
engine/source/input/: action.cpp  event.cpp  input.cpp  key.cpp
engine/source/inputs/: event.cpp  input.cpp
executable/: CMakeLists.txt  main.cpp
game/: CMakeLists.txt
game/include/: binding.hpp  entity.hpp  game.hpp  player.hpp  utility.hpp
game/resources/: CMakeLists.txt
game/resources/shaders/: main.vert
game/source/: CMakeLists.txt  binding.cpp  game.cpp  main.cpp  player.cpp
game/source/core/: binding.cpp  binding.hpp  entity.hpp  game.hpp  player.cpp  settings.hpp
game/source/main/: main.cpp
games/: CMakeLists.txt
games/demo/: CMakeLists.txt  main.cpp
resources/: CMakeLists.txt
resources/shaders/fragment/: lighting.frag  main.frag  normal.frag  skybox.frag
resources/shaders/geometry/: normal.geom
resources/shaders/vertex/: lighting.vert  main.vert  normal.vert  skybox.vert
rf/: CMakeLists.txt
rf/auxiliary/: glm.hpp  imgui.hpp
rf/core/: asset_manager.hpp  assets.hpp  dispatcher.hpp  engine.cpp  engine.hpp  fio.cpp  fio.hpp  image.cpp  image.hpp  io.cpp  map_generators.hpp  math.cpp  math.hpp  scene.hpp  stopwatch.hpp  zip.cpp  zip.hpp
rf/graphics/: camera.hpp  dimensions.hpp  framebuffer.cpp  framebuffer.hpp  lighting.hpp  material.hpp  mesh.cpp  mesh.hpp  mesh_shapes.cpp  mesh_shapes.hpp  meshes.cpp  meshes.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  rotation.hpp  shader.cpp  shader.hpp  storage.cpp  storage.hpp  texture.cpp  texture.hpp  transform.hpp  window.cpp  window.hpp
rf/input/: input_map.cpp  input_map.hpp  key_actions.hpp  key_binding.hpp  keys.hpp
rf/inputs/: actions.hpp  bindings.hpp  input_map.hpp
rf/resources/: library.cpp  library.hpp  manager.hpp
rf/ui/: bindings_hint.cpp  bindings_hint.hpp  context_menus.hpp  drag_drop_types.hpp  font.hpp  hints.hpp  history.hpp  icon_map.hpp  imutil.cpp  imutil.hpp  menu_bar.cpp  menu_bar.hpp  overlay.cpp  overlay.hpp  preview_map.cpp  preview_map.hpp  styles.hpp  tooltips.hpp  window.hpp  zip_cache.hpp
rf/ui/embedded/: b612_font_ttf.cpp  b612_font_ttf.hpp  container_textures_png.cpp  container_textures_png.hpp  cube_mesh_glb.cpp  cube_mesh_glb.hpp  flaticon_icons_png.cpp  flaticon_icons_png.hpp
rf/ui/fonts/: b612_regular_ttf.cpp  b612_regular_ttf.hpp
rf/ui/windows/: bindings.cpp  bindings.hpp  bindings_hint.cpp  bindings_hint.hpp  perfomance.cpp  perfomance.hpp  perfomance_monitor.cpp  perfomance_monitor.hpp  resource_browser.cpp  resource_browser.hpp  scene.cpp  scene.hpp  scene_tree.cpp  scene_tree.hpp
rf/utility/: time.hpp
rf/world/: components.hpp  entity.hpp  scene.hpp
samples/: CMakeLists.txt
samples/undefined/: CMakeLists.txt
samples/undefined/resources/meshes/: cube.glb  plane.glb
samples/undefined/resources/shaders/: main.frag  main.vert
samples/undefined/resources/shaders/common/: essentials.glsl  lighting.glsl  material.glsl
samples/undefined/resources/shaders/include/: lighting.glsl  material.glsl
samples/undefined/resources/shaders/light/: light.frag  light.vert
samples/undefined/resources/shaders/light.rfs/: light.frag  light.vert
samples/undefined/resources/shaders/main/: main.frag  main.vert
samples/undefined/source/: CMakeLists.txt
samples/undefined/source/core/: binding.cpp  binding.hpp  entity.hpp  game.cpp  game.hpp  player.cpp  player.hpp
samples/undefined/source/main/: main.cpp  settings.hpp
samples/undefined/source/utility/: random.hpp  values.hpp
