add_library(RenderFever STATIC
    "core/engine.cpp"
    "core/fio.cpp"
    "core/image.cpp"
    "core/math.cpp"
    "core/zip.cpp"
    "graphics/framebuffer.cpp"
    "graphics/mesh.cpp"
    "graphics/renderer.cpp"
    "graphics/shader.cpp"
    "graphics/storage.cpp"
    "graphics/texture.cpp" 
    "graphics/window.cpp"
    "input/input_map.cpp"
    "resources/library.cpp"
    "ui/embedded/b612_font_ttf.cpp"
    "ui/embedded/container_textures_png.cpp"
    "ui/embedded/cube_mesh_glb.cpp"
    "ui/embedded/flaticon_icons_png.cpp"
    "ui/windows/bindings_hint.cpp"
    "ui/windows/perfomance_monitor.cpp"
    "ui/windows/resource_browser.cpp"
    "ui/windows/scene_tree.cpp"
    "ui/overlay.cpp"
    "ui/preview_map.cpp"
)
target_link_libraries(RenderFever PRIVATE ${RfLinkDependencies})
